[package]
name = "ltdmerge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = "2.14.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tomolib = { version = "1.4.0", features = ["image-encode-gpu"] }
walkdir = "2.5.0"
ltdmerge_derive = { path = "ltdmerge_derive" }

[workspace]
members = [".", "ltdmerge_derive"]

[[bin]]
name = "ltdmerge"
path = "src/main.rs"

[[bin]]
name = "gen_schemas"
path = "src/bin/gen_schemas.rs"
